Fixed Layout Issues

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -1338,3 +1338,15 @@
     font-weight: 600;
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 }
+#fly-wrap{
+    z-index: 40000 ;
+}
+  @media (min-width: 769px) and (max-width: 1199px) {
+.property-box-2 .footer {
+    position: relative;
+    bottom: 0;
+    z-index: 20;
+    width: 100%;
+}
+    }
+
